Doing some experimenting with terminal processes.